@@ -14,64 +14,83 @@ PSQL_DOCKER_IMAGE=postgres:10
 PSQL_USER=postgres
 PSQL_PASSWORD=mysecretpassword
 PSQL_DB=dbeam_test
+DOCKER_NETWORK=dbeam1-network
+JAVA_DOCKER_IMAGE=gcr.io/distroless/java:11
 
 startPostgres() {
-  docker run --name dbeam-postgres \
-    -e POSTGRES_DB=dbeam_test \
-    -e POSTGRES_PASSWORD=mysecretpassword \
-    -v /tmp/pgdata:/var/lib/postgresql/data \
-    -p 54321:5432/tcp -d "$PSQL_DOCKER_IMAGE" || docker start dbeam-postgres
+  set -o xtrace
+  docker --version
+  docker network create "$DOCKER_NETWORK" || true
+
+  mkdir -p /tmp/pgdata
+  docker run --detach --name dbeam-postgres \
+    --net "$DOCKER_NETWORK" \
+    --env "POSTGRES_DB=dbeam_test" \
+    --env "POSTGRES_PASSWORD=mysecretpassword" \
+    --mount="type=bind,source=/tmp/pgdata,target=/var/lib/postgresql/data" \
+    --publish="54321:5432/tcp" "$PSQL_DOCKER_IMAGE" || docker start dbeam-postgres
+  sleep 1
+  docker ps
+  docker logs dbeam-postgres
   # https://stackoverflow.com/questions/35069027/docker-wait-for-postgresql-to-be-running
-  time docker run -i --rm --link dbeam-postgres:postgres -e PGPASSWORD=mysecretpassword "$PSQL_DOCKER_IMAGE" timeout 45s bash -xc 'until psql -h postgres -U postgres dbeam_test -c "select 1"; do sleep 1; done; echo "psql up and running.."'
+  time docker run --interactive --rm \
+    --net "$DOCKER_NETWORK" \
+    --env "PGPASSWORD=mysecretpassword" \
+    "$PSQL_DOCKER_IMAGE" \
+    timeout 45s bash -xc 'until psql -h dbeam-postgres -U postgres dbeam_test -c "select 1"; do sleep 1; done; echo "psql up and running.."'
   sleep 3
-  docker run -i --rm --link dbeam-postgres:postgres -e PGPASSWORD=mysecretpassword "$PSQL_DOCKER_IMAGE" psql -h postgres -U postgres dbeam_test < "$SCRIPT_PATH/ddl.sql"
-  echo '\d' | docker run -i --rm --link dbeam-postgres:postgres -e PGPASSWORD=mysecretpassword "$PSQL_DOCKER_IMAGE" psql -h postgres -U postgres dbeam_test
-  # ensure one can connect to psql server
-  timeout 1 bash -c 'cat < /dev/null > /dev/tcp/0.0.0.0/54331'
+  time docker run --interactive --rm \
+    --net "$DOCKER_NETWORK" \
+    --env "PGPASSWORD=mysecretpassword" \
+    "$PSQL_DOCKER_IMAGE" \
+    timeout 30s psql -h dbeam-postgres -U postgres dbeam_test < "$SCRIPT_PATH/ddl.sql"
+  timeout 1 bash -c "cat < /dev/null > /dev/tcp/0.0.0.0/54321" && echo "success"
 }
 
 dockerClean() {
   docker rm -f dbeam-postgres
+  docker network rm "$DOCKER_NETWORK"
 }
 
-#"-XX:+PrintGCApplicationStoppedTime"
-#-agentpath:/Applications/VisualVM.app/Contents/profiler/lib/deployed/jdk16/mac/libprofilerinterface.jnilib=/Applications/VisualVM.app/Contents/profiler/lib,5141
-export JAVA_OPTS="
+JAVA_OPTS=(
 -XX:+UseParallelGC
 -Xmx1g
 -Xms1g
-"
+)
 
 pack() {
+  java -version
   # create a fat jar
   (cd "$PROJECT_PATH"; mvn package -Ppack -DskipTests -Dmaven.test.skip=true -Dmaven.site.skip=true -Dmaven.javadoc.skip=true)
 }
 
-runFromJar() {
-  (set -ex; java $JAVA_OPTS -cp "$PROJECT_PATH"/dbeam-core/target/dbeam-core-shaded.jar com.spotify.dbeam.jobs.BenchJdbcAvroJob "$@")
+run_docker_dbeam() {
+  time docker run --interactive --rm \
+    --net="$DOCKER_NETWORK" \
+    --mount="type=bind,source=$PROJECT_PATH/dbeam-core/target,target=/dbeam" \
+    --memory=1G \
+    --entrypoint=/usr/bin/java \
+    "$JAVA_DOCKER_IMAGE" \
+    "${JAVA_OPTS[@]}" -cp /dbeam/dbeam-core-shaded.jar com.spotify.dbeam.jobs.BenchJdbcAvroJob "$@"
 }
-
-DOCKER_PSQL_ARGS=(
-  "--username=$PSQL_USER"
-  "--password=$PSQL_PASSWORD"
-  "--connectionUrl=jdbc:postgresql://0.0.0.0:54321/$PSQL_DB?binaryTransfer=${BINARY_TRANSFER:-false}"
-  "--table=${table:-demo_table}"
-)
 
 runDBeamDockerCon() {
   OUTPUT="$SCRIPT_PATH/results/testn/$(date +%FT%H%M%S)/"
+  set -o xtrace
   time \
-    runFromJar \
+    run_docker_dbeam \
     --skipPartitionCheck \
     --targetParallelism=1 \
-    "${DOCKER_PSQL_ARGS[@]}" \
+    "--connectionUrl=jdbc:postgresql://dbeam-postgres:5432/$PSQL_DB?binaryTransfer=${BINARY_TRANSFER:-false}" \
+    "--username=$PSQL_USER" \
+    "--password=$PSQL_PASSWORD" \
+    "--table=${table:-demo_table}" \
     "--partition=$(date +%F)" \
     "--output=$OUTPUT" \
-    "$@" 2>&1 | tee -a /tmp/out1
+    "$@" 2>&1 | tee -a /tmp/debeam_e2e.log
 }
 
 runSuite() {
-  java -version
   table=demo_table
   BINARY_TRANSFER='false' runDBeamDockerCon --executions=3 --avroCodec=deflate1
   BINARY_TRANSFER='false' runDBeamDockerCon --executions=3 --avroCodec=zstandard1
